--- a/index.html
+++ b/index.html
@@ -85,8 +85,32 @@
         <h2 class="up-event">Upcoming Events</h2>
       </div>
       <div class="event-cards">
-        <div class="event1 card"></div>
-        <div class="event2 card"></div>
+        <div class="event1 card">
+          <img src="./images/hero-latest.png" alt="" class="card-img">
+          <div class="card-content">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, error.</p>
+          </div>
+        </div>
+        <div class="event2 card">
+          <img src="./images/hero-latest.jpg" alt="" class="card-img">
+          <div class="card-content">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, error.</p>
+          </div>
+        </div>
+
+        <div class="event2 card">
+          <img src="./images/hero-latest.jpg" alt="" class="card-img">
+          <div class="card-content">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, error.</p>
+          </div>
+        </div>
+
+        <div class="event2 card">
+          <img src="./images/hero-latest.jpg" alt="" class="card-img">
+          <div class="card-content">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo, error.</p>
+          </div>
+        </div>
       </div>
     </div><!--event div-->
   </body>
