added footer section

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=Overpass:wght@400;700&family=Play:wght@700&family=Poppins:ital,wght@0,300;0,400;1,500&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="logo/sdc-logo.png" type="image/x-icon">
   </head>
   <body>
     <nav>
@@ -113,5 +114,9 @@
         </div>
       </div>
     </div><!--event div-->
+    <footer>
+      <p>Created By: Vishwas Kumar<br>
+      <a href="mailto:vishwas452003@gmail.com">vishwas452003@gmail.com</a></p>
+    </footer>
   </body>
 </html>
